-						 >  console_driver is the interface between
-						 >  tty layer and vitual console layer.


Thu Sep 24 CST 2015
- [+] Diary/09-24-2015
- [+] include/sandix/signal.h			[D] Yes! POSIX Signals!
- [+] include/sandix/magic.h			[D] Magic number for structures
- [+] drivers/tty/serial.c
- [+] drivers/tty/dummy.c
- [M] include/sandix/console.h			[D] Add magic number to struct vc_struct
- [M] include/sandix/tty.h			[D] Modify tty_struct.
-						 >  Rename struct console to void *driver_data.
-						 >  Since tty_driver is NOT dedicated for
-						 >  console! We have serial tty driver, too!
-						 >  SO! Use driver_data instead to let struct
-						 >  tty_drvier to work on themself.


Fri Sep 25 CST 2015
- [M] drivers/tty/tty_io.c			[D] driver struct support
- [M] include/sandix/tty.h			[D] Line discipline sperated


Mon Sep 28 CST 2015
- [+] drivers/tty/n_tty.c			[D] Line discipline for tty
- [M] drivers/tty/tty_io.c			[D] Add tty_std_termios support
- [M] include/sandix/termios.h			[D] Fully support termios
- [M] include/sandix/tty.h			[D] Minor fix


Tue Sep 29 CST 2015
- [+] include/sandix/kref.h			[D] Reference Management
- [M] arch/x86/include/asm/atomic.h		[D] ALWAYS_INLINE and more functions.
- [M] include/sandix/tty.h			[D] Add various macros!
- [M] drivers/tty/tty_io.c			[D] Should add some buffer management
-						 >  Linux use tty_port and buffer to manage
-						 >  all queues. This implementation let tty
-						 >  drivers free from buffer management, and
-						 >  the system has a unified mechanism to manage.


Wed Sep 30 CST 2015
- [+] include/sandix/uaccess.h			[D] User/Kernel Space data movement
- [+] include/asm-generic/uaccess.h
- [+] arch/x86/include/asm/uaccess.h
- [+] fs/ext2/					[D] Darling, filesystems lies in the core
- [+] fs/ext3/					 >  part of operating system. Having a
- [+] fs/proc/					 >  totally understanding of fs makes
- [+] fs/Makefile				 >  a more deep insight into OS.
- [+] fs/Kconfig