@@ -1,1 +1,0 @@
-obj-y += i8042.o
