@@ -3,4 +3,5 @@
 #
 
 obj-y := tty_io.o
+obj-y += tty_ldisc.o
 obj-y += n_tty.o
